envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80

    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: websites

          http_filters:
          - name: envoy.filters.http.router
            typed_config:
               

  clusters:
  - name: websites
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: website
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ws-1
                port_value: 8000
        - endpoint:
            address:
              socket_address:
                address: ws-2
                port_value: 8000
